# kier-cli

./: .gitignore  README.md  kier.py  pyproject.toml  requirements.txt  sensemove.py
kier/: pyvenv.cfg
movesense_bt/: movesense_conncection.py  notification_handlers.py  timed_conncection.py  timestamp_to_utf.py  translations.py
movesense_bt/utils/: data_view.py
src/kier_cli/: main.py
src/kier_cli/movesense_bt/: movesense_conncection.py  notification_handlers.py  timed_conncection.py
